@@ -50,6 +50,7 @@
  * 21-Jun-2007 : Removed JCommon dependencies (DG);
  * 28-Sep-2007 : Fixed cloning bug (DG);
  * 02-Oct-2007 : Fixed bug in updating cached bounds (DG);
+ * 03-Oct-2007 : Fixed another bug in updating cached bounds (DG);
  *
  */
 
@@ -119,12 +120,14 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      *
      * @param list  a collection of values from which the various medians will 
      *              be calculated.
-     * @param rowKey  the row key.
-     * @param columnKey  the column key.
+     * @param rowKey  the row key (<code>null</code> not permitted).
+     * @param columnKey  the column key (<code>null</code> not permitted).
+     * 
+     * @see #add(BoxAndWhiskerItem, Comparable, Comparable)
      */
     public void add(List list, Comparable rowKey, Comparable columnKey) {
-        BoxAndWhiskerItem item 
-            = BoxAndWhiskerCalculator.calculateBoxAndWhiskerStatistics(list);
+        BoxAndWhiskerItem item = BoxAndWhiskerCalculator
+                .calculateBoxAndWhiskerStatistics(list);
         add(item, rowKey, columnKey);
     }
     
@@ -133,62 +136,60 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * table.  The various median values are calculated.
      *
      * @param item  a box and whisker item (<code>null</code> not permitted).
-     * @param rowKey  the row key.
-     * @param columnKey  the column key.
+     * @param rowKey  the row key (<code>null</code> not permitted).
+     * @param columnKey  the column key (<code>null</code> not permitted).
+     * 
+     * @see #add(List, Comparable, Comparable)
      */
-    public void add(BoxAndWhiskerItem item, 
-                    Comparable rowKey, 
-                    Comparable columnKey) {
+    public void add(BoxAndWhiskerItem item, Comparable rowKey, 
+            Comparable columnKey) {
 
         this.data.addObject(item, rowKey, columnKey);
         
         // update cached min and max values
         int r = this.data.getRowIndex(rowKey);
         int c = this.data.getColumnIndex(columnKey);
-        if (this.maximumRangeValueRow == r 
-                && this.maximumRangeValueColumn == c) {
-            this.maximumRangeValue = Double.NaN;
+        if ((this.maximumRangeValueRow == r && this.maximumRangeValueColumn 
+                == c) || (this.minimumRangeValueRow == r 
+                && this.minimumRangeValueColumn == c))  {
+            updateBounds();
         }
-        if (this.minimumRangeValueRow == r 
-                && this.minimumRangeValueColumn == c) {
-            this.minimumRangeValue = Double.NaN;
-        }
+        else {
         
+            double minval = Double.NaN;
+            if (item.getMinOutlier() != null) {
+                minval = item.getMinOutlier().doubleValue();
+            }
+            double maxval = Double.NaN;
+            if (item.getMaxOutlier() != null) {
+                maxval = item.getMaxOutlier().doubleValue();
+            }
         
-        double minval = Double.NaN;
-        if (item.getMinOutlier() != null) {
-            minval = item.getMinOutlier().doubleValue();
-        }
-        double maxval = Double.NaN;
-        if (item.getMaxOutlier() != null) {
-            maxval = item.getMaxOutlier().doubleValue();
-        }
+            if (Double.isNaN(this.maximumRangeValue)) {
+                this.maximumRangeValue = maxval;
+                this.maximumRangeValueRow = r;
+                this.maximumRangeValueColumn = c;
+            }
+            else if (maxval > this.maximumRangeValue) {
+                this.maximumRangeValue = maxval;
+                this.maximumRangeValueRow = r;
+                this.maximumRangeValueColumn = c;
+            }
         
-        if (Double.isNaN(this.maximumRangeValue)) {
-            this.maximumRangeValue = maxval;
-            this.maximumRangeValueRow = r;
-            this.maximumRangeValueColumn = c;
-        }
-        else if (maxval > this.maximumRangeValue) {
-            this.maximumRangeValue = maxval;
-            this.maximumRangeValueRow = r;
-            this.maximumRangeValueColumn = c;
-        }
-        
-        if (Double.isNaN(this.minimumRangeValue)) {
-            this.minimumRangeValue = minval;
-            this.minimumRangeValueRow = r;
-            this.minimumRangeValueColumn = c;
-        }
-        else if (minval < this.minimumRangeValue) {
-            this.minimumRangeValue = minval;
-            this.minimumRangeValueRow = r;
-            this.minimumRangeValueColumn = c;
+            if (Double.isNaN(this.minimumRangeValue)) {
+                this.minimumRangeValue = minval;
+                this.minimumRangeValueRow = r;
+                this.minimumRangeValueColumn = c;
+            }
+            else if (minval < this.minimumRangeValue) {
+                this.minimumRangeValue = minval;
+                this.minimumRangeValueRow = r;
+                this.minimumRangeValueColumn = c;
+            }
         }
         
         this.rangeBounds = new Range(this.minimumRangeValue,
               this.maximumRangeValue);
-
         fireDatasetChanged();
 
     }
@@ -242,6 +243,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The mean value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMeanValue(int row, int column) {
 
@@ -262,6 +265,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The mean value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMeanValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -280,6 +285,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      *
      * @return The median value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMedianValue(int row, int column) {
         Number result = null;
@@ -298,6 +305,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the columnKey.
      *
      * @return The median value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMedianValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -316,6 +325,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The first quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ1Value(int row, int column) {
         Number result = null;
@@ -334,6 +345,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The first quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ1Value(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -352,6 +365,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The third quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ3Value(int row, int column) {
         Number result = null;
@@ -370,6 +385,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The third quartile value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getQ3Value(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -387,6 +404,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param key  the column key.
      *
      * @return The column index.
+     * 
+     * @see #getColumnKey(int)
      */
     public int getColumnIndex(Comparable key) {
         return this.data.getColumnIndex(key);
@@ -398,6 +417,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      *
      * @return The column key.
+     * 
+     * @see #getColumnIndex(Comparable)
      */
     public Comparable getColumnKey(int column) {
         return this.data.getColumnKey(column);
@@ -407,6 +428,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the column keys.
      *
      * @return The keys.
+     * 
+     * @see #getRowKeys()
      */
     public List getColumnKeys() {
         return this.data.getColumnKeys();
@@ -418,6 +441,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param key  the row key.
      *
      * @return The row index.
+     * 
+     * @see #getRowKey(int)
      */
     public int getRowIndex(Comparable key) {
         return this.data.getRowIndex(key);
@@ -429,6 +454,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param row  the row index (zero-based).
      *
      * @return The row key.
+     * 
+     * @see #getRowIndex(Comparable)
      */
     public Comparable getRowKey(int row) {
         return this.data.getRowKey(row);
@@ -438,6 +465,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the row keys.
      *
      * @return The keys.
+     * 
+     * @see #getColumnKeys()
      */
     public List getRowKeys() {
         return this.data.getRowKeys();
@@ -447,6 +476,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the number of rows in the table.
      *
      * @return The row count.
+     * 
+     * @see #getColumnCount()
      */
     public int getRowCount() {
         return this.data.getRowCount();
@@ -456,6 +487,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * Returns the number of columns in the table.
      *
      * @return The column count.
+     * 
+     * @see #getRowCount()
      */
     public int getColumnCount() {
         return this.data.getColumnCount();
@@ -468,6 +501,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      *                         y-interval is taken into account.
      * 
      * @return The minimum value.
+     * 
+     * @see #getRangeUpperBound(boolean)
      */
     public double getRangeLowerBound(boolean includeInterval) {
         return this.minimumRangeValue;
@@ -480,6 +515,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      *                         y-interval is taken into account.
      * 
      * @return The maximum value.
+     * 
+     * @see #getRangeLowerBound(boolean)
      */
     public double getRangeUpperBound(boolean includeInterval) {
         return this.maximumRangeValue;
@@ -504,6 +541,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The minimum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinRegularValue(int row, int column) {
         Number result = null;
@@ -522,6 +561,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The minimum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinRegularValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -540,6 +581,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The maximum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxRegularValue(int row, int column) {
         Number result = null;
@@ -558,6 +601,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The maximum regular value.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxRegularValue(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -576,6 +621,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The minimum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinOutlier(int row, int column) {
         Number result = null;
@@ -594,6 +641,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The minimum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMinOutlier(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -612,6 +661,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return The maximum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxOutlier(int row, int column) {
         Number result = null;
@@ -630,6 +681,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return The maximum outlier.
+     * 
+     * @see #getItem(int, int)
      */
     public Number getMaxOutlier(Comparable rowKey, Comparable columnKey) {
         Number result = null;
@@ -648,6 +701,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param column  the column index (zero-based).
      * 
      * @return A list of outlier values.
+     * 
+     * @see #getItem(int, int)
      */
     public List getOutliers(int row, int column) {
         List result = null;
@@ -666,6 +721,8 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
      * @param columnKey  the column key.
      * 
      * @return A list of outlier values.
+     * 
+     * @see #getItem(int, int)
      */
     public List getOutliers(Comparable rowKey, Comparable columnKey) {
         List result = null;
@@ -675,6 +732,52 @@ public class DefaultBoxAndWhiskerCategoryDataset extends AbstractDataset
             result = item.getOutliers();
         }
         return result;
+    }
+    
+    /**
+     * Resets the cached bounds, by iterating over the entire dataset to find
+     * the current bounds.
+     */
+    private void updateBounds() {
+        this.minimumRangeValue = Double.NaN;
+        this.minimumRangeValueRow = -1;
+        this.minimumRangeValueColumn = -1;
+        this.maximumRangeValue = Double.NaN;
+        this.maximumRangeValueRow = -1;
+        this.maximumRangeValueColumn = -1;
+        int rowCount = getRowCount();
+        int columnCount = getColumnCount();
+        for (int r = 0; r < rowCount; r++) {
+            for (int c = 0; c < columnCount; c++) {
+                BoxAndWhiskerItem item = getItem(r, c);
+                if (item != null) {
+                    Number min = item.getMinOutlier();
+                    if (min != null) {
+                        double minv = min.doubleValue();
+                        if (!Double.isNaN(minv)) {
+                            if (minv < this.minimumRangeValue || Double.isNaN(
+                                    this.minimumRangeValue)) {
+                                this.minimumRangeValue = minv;
+                                this.minimumRangeValueRow = r;
+                                this.minimumRangeValueColumn = c;
+                            }
+                        }
+                    }
+                    Number max = item.getMaxOutlier();
+                    if (max != null) {
+                        double maxv = max.doubleValue();
+                        if (!Double.isNaN(maxv)) {
+                            if (maxv > this.maximumRangeValue || Double.isNaN(
+                                    this.maximumRangeValue)) {
+                                this.maximumRangeValue = maxv;
+                                this.maximumRangeValueRow = r;
+                                this.maximumRangeValueColumn = c;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
     
     /**
