@@ -1,5 +1,14 @@
 2007-10-03  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/data/statistics/DefaultBoxAndWhiskerCategoryDataset.java
+	(add(BoxAndWhiskerItem, Comparable, Comparable)): Update cached bounds by
+	iteration if necessary,
+	(updateBounds): New private method,
+	* tests/org/jfree/data/statistics/junit/DefaultBoxAndWhiskerCategoryDatasetTests.java
+	(testGetRangeBounds): New test method.
+	
+2007-10-03  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/data/KeyedObjects2D.java
 	(getObject(Comparable, Comparable)): Check arguments for null or 
 	unrecognised keys,
